--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
 <div class="row">
     <div class="column" id="shield">
       <div class="card" href="password.html">
-          <img src="shield3.png" alt="" width="100" height="100">
+          <img src="assets/shield.png" alt="" width="100" height="100">
           <br>
           <br>
         <a class="option" href="password.html">Check your password strength</a>
@@ -35,7 +35,7 @@
   
     <div class="column" id="hammer">
       <div class="card">
-          <img src="hammer.png" alt="" width="100" height="100">
+          <img src="assets/hammer.png" alt="" width="100" height="100">
          <br>
          <br>
         <a class="option" href="generate.html">Generate a strong password</a>
